--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@fontsource/outfit": "^5.2.8",
     "@tailwindcss/vite": "^4.1.13",
-    "aos": "^3.0.0-beta.6",
     "motion": "^12.23.22",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
