--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@fontsource/outfit": "^5.2.8",
     "@tailwindcss/vite": "^4.1.13",
     "motion": "^12.23.22",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.9.1",
