--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
+    "react-imgix": "^9.10.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.9.1",
     "tailwindcss": "^4.1.13"
