--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "globals": "^16.4.0",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "vite": "^7.1.7",
-    "vite-plugin-static-copy": "^3.1.4"
+    "vite": "^7.1.7"
   }
 }
