--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-imgix": "^9.10.0",
     "react-responsive": "^10.0.1",
